[gd_scene load_steps=10 format=2]

[ext_resource path="res://NPCs/Cutscenes/Fer.png" type="Texture" id=1]
[ext_resource path="res://Player/Keys.png" type="Texture" id=2]
[ext_resource path="res://NPCs/NPC Fernando.gd" type="Script" id=3]
[ext_resource path="res://Shadows/MediumShadow.png" type="Texture" id=4]
[ext_resource path="res://Player/PressedKeys.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=8]
radius = 16.0

[sub_resource type="Animation" id=16]
resource_name = "KeyPrompt"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KeySprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 5 ) ]
}

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("KeySprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}

[sub_resource type="CapsuleShape2D" id=9]
radius = 4.0
height = 4.0

[node name="NPC Fernando" type="Area2D"]
script = ExtResource( 3 )

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
offset = Vector2( 0, 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 9 )
texture = ExtResource( 1 )
offset = Vector2( 0, -18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -11 )
shape = SubResource( 8 )

[node name="KeySprite" type="Sprite" parent="."]
position = Vector2( 0, -32 )
texture = ExtResource( 2 )
hframes = 5
vframes = 8
frame = 4

[node name="KeyPrompt" type="AnimationPlayer" parent="."]
autoplay = "KeyPrompt"
anims/KeyPrompt = SubResource( 16 )
anims/RESET = SubResource( 17 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 0, 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, -9 )
rotation = 1.5708
shape = SubResource( 9 )

[connection signal="body_entered" from="." to="." method="_on_NPC_Student_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_NPC_Student_body_exited"]
